# fsevent-rust

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  flake.nix
.github/workflows/: lint.yml
examples/: fsevent-async-demo.rs  fsevent-demo.rs
fsevent-sys/: .gitignore  Cargo.toml  core_foundation.rs  fsevent.rs  lib.rs
fsevent-sys/src/: core_foundation.rs  fsevent.rs  lib.rs
src/: fsevent.rs  lib.rs  main.rs
tests/: fsevent.rs
