[package]

name = "fsevent"
version = "2.0.1"
authors = [ "Pierre Baillet <pierre@baillet.name>" ]
description = "Rust bindings to the fsevent-sys macOS API for file changes notifications"
license="MIT"
repository = "https://github.com/octplane/fsevent-rust"

[dependencies]
bitflags = "1"
fsevent-sys = "3.0.0"

[dev-dependencies]
tempfile = "3"
time = "0.2.9"
