[package]

name = "fsevent"
version = "2.1.1"
authors = [ "Pierre Baillet <pierre@baillet.name>" ]
description = "Rust bindings to the fsevent-sys macOS API for file changes notifications"
license = "MIT"
repository = "https://github.com/octplane/fsevent-rust"
edition = "2018"

[dependencies]
bitflags = "1"
fsevent-sys = { path = "fsevent-sys" }
core-foundation = "0.9.2"

[dev-dependencies]
tempfile = "3"
time = "0.2.9"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]
