[package]

name = "fsevent"
version = "2.2.0"
authors = ["Pierre Baillet <pierre@baillet.name>"]
description = "Rust bindings to the fsevent-sys macOS API for file changes notifications"
license = "MIT"
repository = "https://github.com/octplane/fsevent-rust"
edition = "2018"

[dependencies]
bitflags = "1"
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "CFString",
    "CFRunLoop",
    "CFArray",
    "CFDate",
] }
objc2-core-services = { version = "0.3.2", default-features = false, features = [
    "std",
    "FSEvents",
] }

[dev-dependencies]
tempfile = "3"
time = "0.2.9"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]
