[package]
name = "fsevent-sys"
version = "3.1.0"
authors = ["Pierre Baillet <pierre@baillet.name>"]
description = "Rust bindings to the fsevent macOS API for file changes notifications"
license = "MIT"
repository = "https://github.com/octplane/fsevent-rust/tree/master/fsevent-sys"

[dependencies]
libc = "0.2.68"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]
