[package]
name = "fsevent-sys"
version = "5.1.0"
authors = ["Pierre Baillet <pierre@baillet.name>"]
description = "Rust bindings to the fsevent macOS API for file changes notifications"
license = "MIT"
repository = "https://github.com/octplane/fsevent-rust/tree/master/fsevent-sys"
edition = "2018"

[dependencies]
dispatch2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
core-foundation = "0.10.1"

[package.metadata.docs.rs]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
